Fix: form no longer has horizontal scroll

--- a/src/app/core/entity-components/entity-form/entity-form/entity-form.component.scss
+++ b/src/app/core/entity-components/entity-form/entity-form/entity-form.component.scss
@@ -8,7 +8,7 @@ app-entity-form {
 }
 
 .entity-form-columns {
-  @include grid-layout.adaptive($min-block-width: 330px);
+  @include grid-layout.adaptive($min-block-width: 330px, $max-screen-width: 414px);
 }
 
 .entity-form-cell {
