--- a/src/styles/mixins/_grid-layout.scss
+++ b/src/styles/mixins/_grid-layout.scss
@@ -27,7 +27,7 @@
 @mixin adaptive($min-block-width, $max-screen-width: $min-block-width) {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax($min-block-width, 1fr));
-  @media all and (max-width: $max-screen-width) {
+  @media screen and (max-width: $max-screen-width) {
     grid-template-columns: 1fr;
   }
   grid-gap: sizes.$large;
